# nonstationarity_toolbox

./: AGENTS.md  README.md  __init__.py  codex.yaml  pyproject.toml
diagnostics/: __init__.py  break_tests.py  long_memory_tests.py  nonlinear_tests.py  unit_root_tests.py  volatility_tests.py
interface/: __init__.py  app_streamlit.py  cli.py
models/: __init__.py  arima_models.py  garch_sv_models.py  long_memory_models.py  ms_models.py  nonparametric.py  tvp_models.py
scripts/: codex_runner.py
utils/: __init__.py  data_utils.py  evaluation_metrics.py  reporting.py
workflows/: __init__.py  full_diagnostic_pipeline.py  model_selection_pipeline.py
